# syncdir

./: Cargo.toml  README.md
src/: client.rs  common.rs  fileinfo.rs  lib.rs  main.rs  server.rs
