[package]
name = "dirsync"
version = "0.1.0"
edition = "2021"


[dependencies]
flate2 = "1.0.26"
serde = { version  = "1.0", features = ["derive", "rc"]}
#serde_json = "1.0.96"
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
notify = "6.0.0"
bincode = "1.3.3"
futures = "0.3.28"
notify-debouncer-mini = "0.3.0"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
debug = false
codegen-units = 1
