[package]
name = "dirsync"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
debug = false
codegen-units = 1


[dependencies]
flate2 = "1.0.26"
serde = { version  = "1.0", features = ["derive"]}
serde_json = "1.0.96"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "4.2.7", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-files = "0.6.2"
notify = "6.0.0"
notify-debouncer-mini = "0.3.0"


